--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
+@import url(//fonts.googleapis.com/css?family=Lato:300:400);
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  background-image: url("./images/beachBackgroundforGatsby.jpg");
+  /* margin: 0; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  font-family: "Lato", sans-serif;
+}
+
+.App {
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  /* align-content: space-between; */
+}
+
+.item {
+  /* justify-content: center; */
+  /* height: 10px;
+  width: 10px; */
+}
+
+.title {
+  /* border: 3px outset lightgray;
+  background: #56ccf2;
+  background: -webkit-linear-gradient(to right, #2f80ed, #56ccf2);
+  background: linear-gradient(to right, #2f80ed, #56ccf2); */
+
+  font-size: 50px;
+  padding: 10px;
+}
+
+.main-logo {
+  width: auto;
+  height: 80%;
+}
+
+h2 {
+  text-align: center;
+  font-size: 30px;
+}
+
+.main-pic {
+  border: 3px outset lightgray;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  height: auto;
+}
+
+.dates-of-life {
+  font-size: 20px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
