--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap");
 
 body {
   background-image: url("./images/beachBackgroundforGatsby.jpg");
@@ -47,11 +48,18 @@ body {
 
 h2 {
   text-align: center;
-  font-size: 30px;
+  font-size: 35px;
+  /* width: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  border: 2px inset white;
+  padding: 10px;
+  /* //FIX CENTERING */
+  /* transform: translateX(340px); */
 }
 
 .main-pic {
-  border: 3px outset lightgray;
+  border: 3px inset lightgray;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -60,7 +68,47 @@ h2 {
 }
 
 .dates-of-life {
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: 550;
+  color: black;
+  font-style: italic;
+  background-color: blue;
+  background-color: #6a93cb;
+  background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
+  /* display: inline; */
+  padding: 5px;
+  padding-left: 5px;
+  padding-right: 7px;
+
+  border: 1px solid white;
+  text-align: center;
+  width: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  /* //FIX CENTERING */
+  transform: translateX(410px);
+}
+
+.menu-btns {
+  color: black;
+}
+
+.button-container button {
+  color: white;
+  background-color: transparent;
+  font-size: 30px;
+  /* font-family: "Lato", sans-serif; */
+  /* border: 3px outset lightgray; */
+  /* background: #56ccf2;
+  background: -webkit-linear-gradient(to bottom, #2f80ed, #56ccf2);
+  background: linear-gradient(to bottom, #2f80ed, #56ccf2); */
+  background-color: transparent;
+  font-weight: 850;
+  padding: 10px;
+  font-family: "Montserrat", sans-serif;
+  border-right: 3px ridge black;
+  border-top: 3px ridge whitesmoke;
+  border-bottom: 3px ridge whitesmoke;
 }
 
 code {
