--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ body {
 h2 {
   text-align: center;
   font-size: 35px;
+  color: ;
   /* width: fit-content;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -59,7 +60,7 @@ h2 {
 }
 
 .main-pic {
-  border: 3px inset lightgray;
+  border: 3px outset white;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -80,7 +81,7 @@ h2 {
   padding-left: 5px;
   padding-right: 7px;
 
-  border: 1px solid white;
+  border: 2px outset white;
   text-align: center;
   width: fit-content;
   width: -webkit-fit-content;
@@ -106,12 +107,90 @@ h2 {
   font-weight: 850;
   padding: 10px;
   font-family: "Montserrat", sans-serif;
-  border-right: 3px ridge black;
-  border-top: 3px ridge whitesmoke;
-  border-bottom: 3px ridge whitesmoke;
+  border-right: 3px solid black;
+  border-top: 3px solid whitesmoke;
+  border-bottom: 3px solid whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.modal {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#a7c7dc+0,85b2d3+100;Blue+Grey+3D */
+  background: rgb(167, 199, 220); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(167, 199, 220, 1) 0%,
+    rgba(133, 178, 211, 1) 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(167, 199, 220, 1) 0%,
+    rgba(133, 178, 211, 1) 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(167, 199, 220, 1) 0%,
+    rgba(133, 178, 211, 1) 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7c7dc', endColorstr='#85b2d3',GradientType=0 ); /* IE6-9 */
+
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: -15px;
+  left: 0px;
+  z-index: 10;
+}
+
+.modal .back-btn {
+  color: white;
+  font-weight: 800;
+  z-index: 5;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.frosted-glass {
+  /* width: 400px;
+  height: 200px; */
+  background: inherit;
+  position: relative;
+  /* z-index: 1; */
+  overflow: hidden;
+  margin: 0 auto;
+  padding: 2rem;
+  box-sizing: border-box;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+  font-size: 30px;
+  /* font-family: "Lato", sans-serif; */
+  /* border: 3px outset lightgray; */
+  /* background: #56ccf2;
+  background: -webkit-linear-gradient(to bottom, #2f80ed, #56ccf2);
+  background: linear-gradient(to bottom, #2f80ed, #56ccf2); */
+  /* background-color: transparent;
+  font-weight: 850;
+  padding: 10px;
+  font-family: "Montserrat", sans-serif;
+  border-right: 3px ridge black;
+  border-top: 3px ridge whitesmoke;
+  border-bottom: 3px ridge whitesmoke; */
+}
+
+.frosted-glass::before {
+  content: "";
+  position: absolute;
+  /* z-index: -1; */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  /* background: inherit; */
+  box-shadow: inset 0 0 3000px rgba(255, 255, 255, 0.5);
+  filter: blur(10px);
+  margin: -20px;
 }
