--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap");
+@import url(https://fonts.googleapis.com/css2?family=Homenaje&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Mate+SC&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Mate+SC&family=Nunito:wght@700&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Mate+SC&family=Nunito:wght@700&display=swap);
 
 body {
-  background-image: url("./images/beachBackgroundforGatsby.jpg");
+  background-image: url("./images/MyBoyStinson.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
   /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -20,7 +28,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   /* align-content: space-between; */
 }
@@ -38,18 +46,21 @@ body {
   background: linear-gradient(to right, #2f80ed, #56ccf2); */
 
   font-size: 50px;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .main-logo {
   width: auto;
-  height: 80%;
+  /* height: 80%; */
 }
 
 h2 {
   text-align: center;
-  font-size: 35px;
-  color: ;
+  font-size: 27px;
+  color: black;
+  /* font-family: "Mate SC", serif;
+  font-family: "Nunito", sans-serif; */
+  text-transform: uppercase;
   /* width: fit-content;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -57,6 +68,12 @@ h2 {
   padding: 10px;
   /* //FIX CENTERING */
   /* transform: translateX(340px); */
+}
+
+#dates {
+  color: white;
+  font-size: 20px;
+  /* font-family: "Mate SC", serif; */
 }
 
 .main-pic {
@@ -96,20 +113,26 @@ h2 {
 
 .button-container button {
   color: white;
-  background-color: transparent;
-  font-size: 30px;
+  /* background-color: transparent; */
+  font-size: 35px;
   /* font-family: "Lato", sans-serif; */
   /* border: 3px outset lightgray; */
   /* background: #56ccf2;
   background: -webkit-linear-gradient(to bottom, #2f80ed, #56ccf2);
   background: linear-gradient(to bottom, #2f80ed, #56ccf2); */
-  background-color: transparent;
-  font-weight: 850;
+  /* background-color: transparent; */
+  font-weight: 950;
   padding: 10px;
   font-family: "Montserrat", sans-serif;
-  border-right: 3px solid black;
+  font-family: "Homenaje", sans-serif;
+  font-family: "Mate SC", serif;
+  font-family: "Mate SC", serif;
+  /* font-family: "Nunito", sans-serif; */
+
+  /* border-right: 3px solid whitesmoke;
   border-top: 3px solid whitesmoke;
-  border-bottom: 3px solid whitesmoke;
+  border-bottom: 3px solid whitesmoke; */
+  /* transform: translateX(-150px); */
 }
 
 code {
@@ -156,6 +179,8 @@ code {
 }
 
 .frosted-glass {
+  /* transform: translateX(-390px); */
+  color: white;
   /* width: 400px;
   height: 200px; */
   background: inherit;
@@ -163,20 +188,21 @@ code {
   /* z-index: 1; */
   overflow: hidden;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   box-sizing: border-box;
-  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
-  font-size: 30px;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.6);
+  font-size: 25px;
   /* font-family: "Lato", sans-serif; */
   /* border: 3px outset lightgray; */
-  /* background: #56ccf2;
-  background: -webkit-linear-gradient(to bottom, #2f80ed, #56ccf2);
-  background: linear-gradient(to bottom, #2f80ed, #56ccf2); */
-  /* background-color: transparent;
+  background: #f94323;
+  /* background: -webkit-linear-gradient(to bottom, #cbcbcb, #b7b9ba); */
+  /* background: linear-gradient(to bottom, #2f80ed, #56ccf2); */
+  /* background-color: transparent; */
+  opacity: 0.9;
   font-weight: 850;
   padding: 10px;
-  font-family: "Montserrat", sans-serif;
-  border-right: 3px ridge black;
+
+  /* border-right: 3px ridge black;
   border-top: 3px ridge whitesmoke;
   border-bottom: 3px ridge whitesmoke; */
 }
@@ -184,13 +210,30 @@ code {
 .frosted-glass::before {
   content: "";
   position: absolute;
-  /* z-index: -1; */
+  z-index: -1;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   /* background: inherit; */
-  box-shadow: inset 0 0 3000px rgba(255, 255, 255, 0.5);
-  filter: blur(10px);
+  box-shadow: inset 0 0 3000px rgba(39, 147, 230, 3.9);
+  filter: blur(5px);
   margin: -20px;
 }
+/*
+.glass {
+  color: black;
+  position: relative;
+}
+
+.glass::before {
+  z-index: -1;
+  display: block;
+  position: absolute;
+  content: " ";
+  opacity: 0.2;
+}
+
+.glass {
+  background-color: white;
+} */
