--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,8 @@ span {
   color: white;
   font-size: 20px;
   margin-top: -6px;
+  font-weight: 800;
+  letter-spacing: 0.5px;
 
   /* font-family: "Mate SC", serif; */
 }
