--- a/src/index.css
+++ b/src/index.css
@@ -319,3 +319,61 @@ code {
     transform: rotateY(-60deg);
   }
 }
+
+/* TEXT */
+
+.nowrap {
+  white-space: nowrap;
+  word-break: keep-all;
+  color: white;
+  font-family: "Mate SC", serif;
+  font-weight: 800;
+}
+
+.textH2 {
+  font-size: 2.5em;
+  font-weight: 700;
+  word-break: keep-all;
+  font-family: "Mate SC", serif;
+  margin-bottom: 60px;
+}
+
+p {
+  text-algin: left;
+  font-size: 1em;
+  font-weight: 500;
+  color: black;
+}
+
+p.justify {
+  text-align: justify;
+}
+
+.textH2,
+p {
+  text-align: left;
+}
+
+.wrapper {
+  padding: 1em;
+  min-width: 17.5em;
+  max-width: 50em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bodyText {
+  margin: 0;
+  text-align: center;
+  font-size: 1.3em;
+  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
+
+  line-height: 1.5em;
+
+  /* background-color: rgb(220, 220, 220); */
+}
+
+/* html {
+  font-size: 100%;
+} */
